# GermiRRad-Thesis

./: README.md
mir100/.catkin_tools/profiles/default/: devel_collisions.txt
mir100/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
mir100/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
mir100/devel/.private/global_planner/: .catkin  .rosinstall  local_setup.sh
mir100/devel/.private/iris_lama/: .catkin  setup.sh
mir100/devel/.private/iris_lama_ros/: .catkin
mir100/devel/.private/mir100_description/: .catkin  .rosinstall  local_setup.sh
mir100/devel/.private/mir100_driver/: .catkin  local_setup.sh
mir100/devel/.private/mir100_dwb_critics/: .catkin  .rosinstall  setup.sh
mir100/devel/.private/mir100_explore/: .catkin  local_setup.sh  setup.sh
mir100/devel/.private/mir100_gazebo/: .catkin
mir100/devel/.private/mir100_germgrid/: .catkin
mir100/devel/.private/mir100_gmapping/: .catkin  (+1 more)
mir100/logs/mir100_explore/: build.make.003.log.stderr
mir100/src/mir100_explore/: CMakeLists.txt  package.xml
mir100/src/mir100_explore/include/explore/: costmap_tools.h  explore.h  frontier_search.h
mir100/src/mir100_explore/launch/: explore.launch  explore_costmap.launch
mir100/src/mir100_explore/src/: costmap_tools.cpp  explore.cpp  explore_backup.cpp  frontier_search copy.cpp  frontier_search.cpp
mir100/src/mir100_germgrid/: package.xml
mir100/src/mir100_gmapping/: CMakeLists.txt
mir_ws/src/germgrid/: package.xml
mylama_ws/src/germgrid/: CMakeLists.txt  package.xml
(+123 files in other folders)
