<?xml version="1.0"?>
<package format="2">
  <name>mir100_explore</name>
  <version>1.0.0</version>

  <description>Lightweight frontier-based exploration.</description>

  <maintainer email="hugoacbarros@ua.pt">Hugo Barros</maintainer>

  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>costmap_2d</depend>
  <depend>actionlib</depend>
  <depend>iris_lama</depend>
  <depend>iris_lama_ros/</depend>

  <test_depend>roslaunch</test_depend>
</package>
